Fix overflow in custom-card

--- a/frontend/src/custom-card.scss
+++ b/frontend/src/custom-card.scss
@@ -10,6 +10,7 @@
   );
   box-shadow: 0px 4px 4px #00000044;
   border-radius: 4px;
+  overflow: hidden;
 }
 
 .custom-card.accent {
